@@ -394,6 +394,10 @@ NXSL_Value *NXSL_NodeClass::getAttr(NXSL_Object *object, const TCHAR *attr)
    {
       value = new NXSL_Value((LONG)((node->getFlags() & NF_IS_CDP) ? 1 : 0));
    }
+   else if (!_tcscmp(attr, _T("isInMaintenanceMode")))
+   {
+      value = new NXSL_Value((LONG)(node->isInMaintenanceMode() ? 1 : 0));
+   }
    else if (!_tcscmp(attr, _T("isLLDP")))
    {
       value = new NXSL_Value((LONG)((node->getFlags() & NF_IS_LLDP) ? 1 : 0));
@@ -425,6 +429,10 @@ NXSL_Value *NXSL_NodeClass::getAttr(NXSL_Object *object, const TCHAR *attr)
    else if (!_tcscmp(attr, _T("isSONMP")))
    {
       value = new NXSL_Value((LONG)((node->getFlags() & NF_IS_SONMP) ? 1 : 0));
+   }
+   else if (!_tcscmp(attr, _T("lastAgentCommTime")))
+   {
+      value = new NXSL_Value((INT64)node->getLastAgentCommTime());
    }
    else if (!_tcscmp(attr, _T("platformName")))
    {
